Header is done and adptive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,142 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header"> </header>
+    <header class="header container">
+      <nav class="header__nav">
+        <button class="header__mob-nav"
+          ><img src="img/icons/hamburger.png" alt="" class="header__mob-img"
+        /></button>
+        <ul class="header__left-list">
+          <li class="header__left-item">Магазины</li>
+          <li class="header__left-item">Акции</li>
+          <li class="header__left-item">Доставка и оплата</li>
+        </ul>
+        <picture class="header__logo">
+          <source srcset="img/logo-mob.png" media="(max-width:600px)" />
+          <img src="img/logo.svg" alt="Shop Logo" />
+        </picture>
+        <div class="header__right">
+          <p class="header__address">Москва, ул. Науки 25</p>
+          <ul class="header__right-list">
+            <li class="header__right-item">
+              <a href="" class="header__right-wishlist"
+                ><img src="img/heart.svg" alt="" class="header__right-img"
+              /></a>
+            </li>
+            <li class="header__right-item">
+              <a href="" class="header__right-user"
+                ><img src="img/user.svg" alt="" class="header__right-img"
+              /></a>
+            </li>
+            <li class="header__right-item">
+              <a href="" class="header__right-cart"
+                ><img src="img/cart.svg" alt="" class="header__right-img"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="header__bottom">
+        <div class="header__mob-list-wrapper">
+          <ul class="header__mob-list">
+            <li class="header__mob-item">Магазины</li>
+            <li class="header__mob-item">Акции</li>
+            <li class="header__mob-item">Доставка и оплата</li>
+          </ul>
+        </div>
+        <ul class="header__bottom-list">
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Катера</a>
+          </li>
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Гидроциклы</a>
+          </li>
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Лодки</a>
+          </li>
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Вездеходы</a>
+          </li>
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Снегоходы</a>
+          </li>
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Двигатели</a>
+          </li>
+          <li class="header__bottom-item">
+            <a href="" class="header__bottom-link">Запчасти</a>
+          </li>
+        </ul>
+        <ul class="header__mob-menu">
+          <li class="header__mob-menu-item">
+            <img src="img/user.svg" alt="" class="header__mob-menu-icon" />
+            <a href="" class="header__mob-menu-link">Войти</a> </li
+          ><li class="header__mob-menu-item">
+            <img src="img/user.svg" alt="" class="header__mob-menu-icon" />
+            <a href="" class="header__mob-menu-link">Регистрация</a> </li
+          ><li class="header__mob-menu-item">
+            <img src="img/heart.svg" alt="" class="header__mob-menu-icon" />
+            <a href="" class="header__mob-menu-link">Избранное</a> </li
+          ><li class="header__mob-menu-item">
+            <img src="img/cart.svg" alt="" class="header__mob-menu-icon" />
+            <a href="" class="header__mob-menu-link">Корзина</a> </li
+          ><li class="header__mob-menu-item">
+            <img
+              src="img/icons/house.svg"
+              alt=""
+              class="header__mob-menu-icon"
+            />
+            <a href="" class="header__mob-menu-link">Магазины</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <img
+              src="img/icons/procent.svg"
+              alt=""
+              class="header__mob-menu-icon"
+            />
+            <a href="" class="header__mob-menu-link">Акции</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <img src="img/icons/box.svg" alt="" class="header__mob-menu-icon" />
+            <a href="" class="header__mob-menu-link">Магазины</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <img src="" alt="" class="header__mob-menu-icon" />
+            <a href="" class="header__mob-menu-link">Доставка и оплата</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Квадроциклы</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Катера</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Гидроциклы</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Лодки</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Вездеходы</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Снегоходы</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Двигатели</a>
+          </li>
+          <li class="header__mob-menu-item">
+            <a href="" class="header__mob-menu-link">Запчасти</a>
+          </li>
+          <li class="header__mob-menu-address">
+            <p>
+              Москва, <br />
+              ул. Науки 25
+            </p>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <script src="js/main.js"></script>
   </body>
 </html>
