--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
@@ -144,6 +146,60 @@
         </ul>
       </div>
     </header>
+
+    <main class="container">
+      <section class="banner">
+        <div class="banner__slider">
+          <div class="banner__slide">
+            <img
+              src="img/content/slider-banner.jpg"
+              alt=""
+              class="banner__slide-img"
+            />
+          </div>
+          <div class="banner__slide">
+            <img
+              src="img/content/slider-banner.jpg"
+              alt=""
+              class="banner__slide-img"
+            />
+          </div>
+          <div class="banner__slide">
+            <img
+              src="img/content/slider-banner.jpg"
+              alt=""
+              class="banner__slide-img"
+            />
+          </div>
+          <div class="banner__slide">
+            <img
+              src="img/content/slider-banner.jpg"
+              alt=""
+              class="banner__slide-img"
+            />
+          </div>
+        </div>
+
+        <div class="ads sale">
+          <div class="ads__top">
+            <p class="ads__price">190 000</p>
+            <p class="ads__price--old">225 000</p>
+          </div>
+          <img src="img/content/slider-right.png" alt="" class="ads__img" />
+          <h4 class="ads__title"
+            >Лодочный мотор<br />
+            Suzuki DF9.9BRS</h4
+          >
+          <p class="ads__promotext"
+            >Акция действует до<br />
+            <span>31.08.2020</span>
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="slick/slick.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
