block categories is done

--- a/index.html
+++ b/index.html
@@ -199,12 +199,16 @@
 
       <section class="search">
         <div class="search__wrapper">
-          <div class="search__tabs">
-            <a href="#search-1" class="search__tab search__tab--active"
-              >Поиск по номеру</a
-            >
-            <a href="#search-2" class="search__tab">Поиск по марке</a>
-            <a href="#search-3" class="search__tab">Поиск по названию товара</a>
+          <div class="search__tabs-wrapper">
+            <div class="search__tabs">
+              <a href="#search-1" class="search__tab search__tab--active"
+                >Поиск по номеру</a
+              >
+              <a href="#search-2" class="search__tab">Поиск по марке</a>
+              <a href="#search-3" class="search__tab"
+                >Поиск по названию товара</a
+              >
+            </div>
           </div>
           <div class="search__content">
             <div
@@ -238,6 +242,65 @@
             >
           </div>
         </div>
+      </section>
+
+      <section class="categories">
+        <ul class="categories__list">
+          <li class="categories__item">
+            <a href="" class="categories__link">
+              <div class="categories__info">
+                <p class="categories__title">Вездеходы</p>
+                <p class="categories__more">Подробее</p>
+              </div>
+              <img src="img/category/1.png" alt="" class="categories__img" />
+            </a>
+          </li>
+          <li class="categories__item">
+            <a href="" class="categories__link">
+              <div class="categories__info">
+                <p class="categories__title">Катера</p>
+                <p class="categories__more">Подробее</p>
+              </div>
+              <img src="img/category/2.png" alt="" class="categories__img" />
+            </a>
+          </li>
+          <li class="categories__item">
+            <a href="" class="categories__link">
+              <div class="categories__info">
+                <p class="categories__title">Квадроциклы</p>
+                <p class="categories__more">Подробее</p>
+              </div>
+              <img src="img/category/3.png" alt="" class="categories__img" />
+            </a>
+          </li>
+          <li class="categories__item">
+            <a href="" class="categories__link">
+              <div class="categories__info">
+                <p class="categories__title">Двигатели</p>
+                <p class="categories__more">Подробее</p>
+              </div>
+              <img src="img/category/4.png" alt="" class="categories__img" />
+            </a>
+          </li>
+          <li class="categories__item">
+            <a href="" class="categories__link">
+              <div class="categories__info">
+                <p class="categories__title">Гидроциклы</p>
+                <p class="categories__more">Подробее</p>
+              </div>
+              <img src="img/category/5.png" alt="" class="categories__img" />
+            </a>
+          </li>
+          <li class="categories__item">
+            <a href="" class="categories__link">
+              <div class="categories__info">
+                <p class="categories__title">Снегоходы</p>
+                <p class="categories__more">Подробее</p>
+              </div>
+              <img src="img/category/6.png" alt="" class="categories__img" />
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
 
