Slider of Popular is done

--- a/index.html
+++ b/index.html
@@ -302,6 +302,284 @@
           </li>
         </ul>
       </section>
+
+      <section class="popular">
+        <h2 class="title">Популярные товары</h2>
+        <div class="popular__wrapper">
+          <div class="popular__tab-wrapper">
+            <div class="popular__tabs">
+              <a href="#pop-1" class="popular__tab popular__tab--active"
+                >запчасти</a
+              >
+              <a href="#pop-2" class="popular__tab">моторы</a>
+              <a href="#pop-3" class="popular__tab">шины </a>
+              <a href="#pop-4" class="popular__tab">электроника </a>
+              <a href="#pop-5" class="popular__tab">инструменты</a>
+              <a href="#pop-6" class="popular__tab">аксессуары </a>
+            </div>
+          </div>
+          <div class="popular__content">
+            <div
+              id="pop-1"
+              class="popular__content-item popular__content-item--active"
+            >
+              <ul class="popular__list">
+                <li class="popular__item">
+                  <div class="card card__not-available--active">
+                    <button class="wishlist"></button>
+                    <button class="cart"></button>
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
+                    <p class="card__hover">посмотреть товар</p>
+                    <h3 class="card__title">Спасательное снаряжение</h3>
+                    <span class="card__price">9 800 ₽</span>
+                    <p class="card__not-available"
+                      >нет в наличии<br />
+                      <span><a href="">Сообщить о поступлении</a></span>
+                    </p>
+                  </div>
+                </li>
+                <li class="popular__item">
+                  <div class="card sale">
+                    <button class="wishlist"></button>
+                    <button class="cart"></button>
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
+                    <p class="card__hover">посмотреть товар</p>
+                    <h3 class="card__title">Спасательное снаряжение</h3>
+                    <span class="card__price">9 800 ₽</span>
+                    <p class="card__not-available"
+                      >нет в наличии<br />
+                      <span><a href="">Сообщить о поступлении</a></span>
+                    </p>
+                  </div>
+                </li>
+                <li class="popular__item">
+                  <div class="card">
+                    <button class="wishlist"></button>
+                    <button class="cart"></button>
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
+                    <p class="card__hover">посмотреть товар</p>
+                    <h3 class="card__title">Спасательное снаряжение</h3>
+                    <span class="card__price">9 800 ₽</span>
+                    <p class="card__not-available"
+                      >нет в наличии<br />
+                      <span><a href="">Сообщить о поступлении</a></span>
+                    </p>
+                  </div>
+                </li>
+                <li class="popular__item">
+                  <div class="card sale">
+                    <button class="wishlist"></button>
+                    <button class="cart"></button>
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
+                    <p class="card__hover">посмотреть товар</p>
+                    <h3 class="card__title">Спасательное снаряжение</h3>
+                    <span class="card__price">9 800 ₽</span>
+                    <p class="card__not-available"
+                      >нет в наличии<br />
+                      <span><a href="">Сообщить о поступлении</a></span>
+                    </p>
+                  </div>
+                </li>
+                <li class="popular__item">
+                  <div class="card card__not-available--active">
+                    <button class="wishlist"></button>
+                    <button class="cart"></button>
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
+                    <p class="card__hover">посмотреть товар</p>
+                    <h3 class="card__title">Спасательное снаряжение</h3>
+                    <span class="card__price">9 800 ₽</span>
+                    <p class="card__not-available"
+                      >нет в наличии<br />
+                      <span><a href="">Сообщить о поступлении</a></span>
+                    </p>
+                  </div>
+                </li>
+                <li class="popular__item">
+                  <div class="card">
+                    <button class="wishlist"></button>
+                    <button class="cart"></button>
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
+                    <p class="card__hover">посмотреть товар</p>
+                    <h3 class="card__title">Спасательное снаряжение</h3>
+                    <span class="card__price">9 800 ₽</span>
+                    <p class="card__not-available"
+                      >нет в наличии<br />
+                      <span><a href="">Сообщить о поступлении</a></span>
+                    </p>
+                  </div>
+                </li>
+                <li class="popular__item">
+                  <div class="card__wrapper">
+                    <div class="card sale">
+                      <button class="wishlist"></button>
+                      <button class="cart"></button>
+                      <img
+                        src="img/content/pop-1.png"
+                        alt=""
+                        class="card__img"
+                      />
+                      <p class="card__hover">посмотреть товар</p>
+                      <h3 class="card__title">Спасательное снаряжение</h3>
+                      <span class="card__price">9 800 ₽</span>
+                      <p class="card__not-available"
+                        >нет в наличии<br />
+                        <span><a href="">Сообщить о поступлении</a></span>
+                      </p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="popular__content">
+            <div id="pop-2" class="popular__content-item popular__content-item"
+              ><div class="popular__content">
+                <div
+                  id="pop-1"
+                  class="popular__content-item popular__content-item--active"
+                >
+                  <ul class="popular__list">
+                    <li class="popular__item">
+                      <div class="card card__not-available--active">
+                        <button class="wishlist"></button>
+                        <button class="cart"></button>
+                        <img
+                          src="img/content/pop-1.png"
+                          alt=""
+                          class="card__img"
+                        />
+                        <p class="card__hover">посмотреть товар</p>
+                        <h3 class="card__title">Спасательное снаряжение</h3>
+                        <span class="card__price">9 800 ₽</span>
+                        <p class="card__not-available"
+                          >нет в наличии<br />
+                          <span><a href="">Сообщить о поступлении</a></span>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="popular__item">
+                      <div class="card sale">
+                        <button class="wishlist"></button>
+                        <button class="cart"></button>
+                        <img
+                          src="img/content/pop-1.png"
+                          alt=""
+                          class="card__img"
+                        />
+                        <p class="card__hover">посмотреть товар</p>
+                        <h3 class="card__title">Спасательное снаряжение</h3>
+                        <span class="card__price">9 800 ₽</span>
+                        <p class="card__not-available"
+                          >нет в наличии<br />
+                          <span><a href="">Сообщить о поступлении</a></span>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="popular__item">
+                      <div class="card">
+                        <button class="wishlist"></button>
+                        <button class="cart"></button>
+                        <img
+                          src="img/content/pop-1.png"
+                          alt=""
+                          class="card__img"
+                        />
+                        <p class="card__hover">посмотреть товар</p>
+                        <h3 class="card__title">Спасательное снаряжение</h3>
+                        <span class="card__price">9 800 ₽</span>
+                        <p class="card__not-available"
+                          >нет в наличии<br />
+                          <span><a href="">Сообщить о поступлении</a></span>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="popular__item">
+                      <div class="card sale">
+                        <button class="wishlist"></button>
+                        <button class="cart"></button>
+                        <img
+                          src="img/content/pop-1.png"
+                          alt=""
+                          class="card__img"
+                        />
+                        <p class="card__hover">посмотреть товар</p>
+                        <h3 class="card__title">Спасательное снаряжение</h3>
+                        <span class="card__price">9 800 ₽</span>
+                        <p class="card__not-available"
+                          >нет в наличии<br />
+                          <span><a href="">Сообщить о поступлении</a></span>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="popular__item">
+                      <div class="card card__not-available--active">
+                        <button class="wishlist"></button>
+                        <button class="cart"></button>
+                        <img
+                          src="img/content/pop-1.png"
+                          alt=""
+                          class="card__img"
+                        />
+                        <p class="card__hover">посмотреть товар</p>
+                        <h3 class="card__title">Спасательное снаряжение</h3>
+                        <span class="card__price">9 800 ₽</span>
+                        <p class="card__not-available"
+                          >нет в наличии<br />
+                          <span><a href="">Сообщить о поступлении</a></span>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="popular__item">
+                      <div class="card">
+                        <button class="wishlist"></button>
+                        <button class="cart"></button>
+                        <img
+                          src="img/content/pop-1.png"
+                          alt=""
+                          class="card__img"
+                        />
+                        <p class="card__hover">посмотреть товар</p>
+                        <h3 class="card__title">Спасательное снаряжение</h3>
+                        <span class="card__price">9 800 ₽</span>
+                        <p class="card__not-available"
+                          >нет в наличии<br />
+                          <span><a href="">Сообщить о поступлении</a></span>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="popular__item">
+                      <div class="card__wrapper">
+                        <div class="card sale">
+                          <button class="wishlist"></button>
+                          <button class="cart"></button>
+                          <img
+                            src="img/content/pop-1.png"
+                            alt=""
+                            class="card__img"
+                          />
+                          <p class="card__hover">посмотреть товар</p>
+                          <h3 class="card__title">Спасательное снаряжение</h3>
+                          <span class="card__price">9 800 ₽</span>
+                          <p class="card__not-available"
+                            >нет в наличии<br />
+                            <span><a href="">Сообщить о поступлении</a></span>
+                          </p>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="popular__content">
+            <div id="pop-3" class="popular__content-item popular__content-item"
+              >content - 3
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -310,3 +588,18 @@
     <script src="js/my.js"></script>
   </body>
 </html>
+
+<!-- Card Template -->
+
+<!-- <div class="card">
+  <button class="wishlist"></button>
+  <button class="cart"></button>
+  <img src="" alt="" class="card__img" />
+  <p class="card__hover"></p>
+  <h3 class="card__title"></h3>
+  <span class="card__price"></span>
+  <p class="card__not-available"
+    >нет в наличии<br />
+    <span><a href="">Сообщить о поступлении</a></span>
+  </p>
+</div> -->
