--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                   <div class="card sale">
                     <button class="wishlist"></button>
                     <button class="cart"></button>
-                    <img src="img/contensim-1.png" alt="" class="card__img" />
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
                     <p class="card__hover">посмотреть товар</p>
                     <h3 class="card__title">Спасательное снаряжение</h3>
                     <span class="card__price">9 800 ₽</span>
@@ -610,7 +610,7 @@
                   <div class="card">
                     <button class="wishlist"></button>
                     <button class="cart"></button>
-                    <img src="img/contensim-1.png" alt="" class="card__img" />
+                    <img src="img/content/pop-1.png" alt="" class="card__img" />
                     <p class="card__hover">посмотреть товар</p>
                     <h3 class="card__title">Спасательное снаряжение</h3>
                     <span class="card__price">9 800 ₽</span>
@@ -807,7 +807,56 @@
           </div>
         </div>
       </section>
-</main>
+    </main>
+          <footer class="footer">
+            <div class="footer__wrapper container">
+              <div class="footer__subscribe">
+                <h4 class="footer__subscribe-title">Подпишитесь на нашу рассылку <br>
+                    и узнавайте о акция быстрее</h4>
+                <input class="footer__subscribe-input" type="email" placeholder="Введите ваш e-mail:">
+                <button class="footer__subscribe-btn">Отправить</button>
+              </div>
+              <div class="footer__info">
+                <ul class="footer__list">
+                    <li class="footer__item footer__item--title">Информация
+                        </li>
+                    <li class="footer__item "><a href="">О компании</a></li>
+                    <li class="footer__item "><a href="">Контакты</a></li>
+                    <li class="footer__item "><a href="">Акции</a></li>
+                    <li class="footer__item "><a href="">Магазины</a></li>
+                </ul>
+              </div>
+              <div class="footer__info-2">
+                <ul class="footer__list">
+                    <li class="footer__item footer__item--title"><a href=""></a> Интернет-магазин</li>
+                    <li class="footer__item "><a href="">Доставка и самовывоз</a></li>
+                    <li class="footer__item "><a href="">Оплата</a></li>
+                    <li class="footer__item "><a href="">Возврат-обмен</a></li>
+                    <li class="footer__item "><a href="">Новости</a></li>
+                </ul>
+              </div>
+              <div class="footer__social">
+                <ul class="footer__social-list">
+                    <li class="footer__social-item">
+                        <img src="img/icons/facebook.svg" alt="">
+                    </li>
+                    <li class="footer__social-item">
+                        <img src="img/icons/instagram.svg" alt="">
+                    </li>
+                    <li class="footer__social-item">
+                        <img src="img/icons/vk.svg" alt="">
+                    </li>
+                    <li class="footer__social-item">
+                        <img src="img/icons/youtube.svg" alt="">
+                    </li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer__policy">
+                <a href="" class="footer__terms">Договор оферты</a>
+                <a href="" class="footer__privacy">Политика обработки персональных данных</a>
+            </div>
+          </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="slick/slick.min.js"></script>
