Catalog is partly fixed

--- a/catalog.html
+++ b/catalog.html
@@ -173,6 +173,18 @@
               ><button class="catalog__btn-item">еще</button></li
             >
           </ul>
+          <select class="catalog__select" name="" id="">
+            <option value="">По популярности</option>
+            <option value="">По дате добавления</option>
+            <option value="">По убыванию</option>
+            <option value="">По возрастанию</option>
+          </select>
+          <button class="catalog__grid-btn"
+            ><img src="img/filter-icon-grid.svg" alt=""
+          /></button>
+          <button class="catalog__list-btn"
+            ><img src="img/filter-icon-lines.svg" alt=""
+          /></button>
         </div>
 
         <div class="catalog__inner">
@@ -468,7 +480,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 2.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -488,7 +500,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 3.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -508,7 +520,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 4.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -528,7 +540,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 5.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -548,7 +560,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 6.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -568,7 +580,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 7.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -588,7 +600,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 8.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -608,7 +620,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/s-l225 1.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -628,7 +640,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/s-l225 2.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -648,7 +660,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/s-l225 3.png"
                       alt=""
                       class="card__img"
                   /></div>
@@ -668,7 +680,7 @@
                   <button class="cart"></button>
                   <div class="card__img-wrapper"
                     ><img
-                      src="img/catalog/gidrotsikl-brp-seadoo-gti-130hp-se-blackmango-orange-73936232995706_small6 1.png"
+                      src="img/catalog/s-l225 4.png"
                       alt=""
                       class="card__img"
                   /></div>
