index page is adaptive

--- a/index.html
+++ b/index.html
@@ -221,25 +221,26 @@
                 placeholder="Поиск по номеру"
               />
               <button class="search__btn btn">искать</button>
+              <button class="search__mob-btn"></button>
             </div>
 
             <div id="search-2" class="search__content-item">
               <input
                 type="text"
                 class="search__input input"
-                placeholder="Поиск по марке"
-              />
-              <button class="search__btn btn">искать</button></div
-            >
+                placeholder="Поиск по марке" />
+              <button class="search__btn btn">искать</button>
+              <button class="search__mob-btn"></button
+            ></div>
 
             <div id="search-3" class="search__content-item">
               <input
                 type="text"
                 class="search__input input"
-                placeholder="Поиск по названию товара"
-              />
-              <button class="search__btn btn">искать</button></div
-            >
+                placeholder="Поиск по названию товара" />
+              <button class="search__btn btn">искать</button>
+              <button class="search__mob-btn"></button
+            ></div>
           </div>
         </div>
       </section>
